[tool.poetry]
name = "tasmota-docs"
version = "0.1.0"
description = ""
authors = ["blakadder"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1"
pymdown-extensions = "^7.0b"
mkdocs-material = "5.0.0rc4"
pygments = "^2.6"
mkdocs-altlink-plugin = {git = "https://github.com/cmitu/mkdocs-altlink-plugin/"}
mkdocs-minify-plugin = "^0.2.3"
mkdocs-redirects = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
